@@ -15,7 +15,7 @@ TEST_PROGS += testarraylist
 testarraylist_VALASOURCES = testarraylist.vala
 testarraylist_SOURCES = testarraylist.c testarraylist.h
 $(testarraylist_SOURCES): $(testarraylist_VALASOURCES)
-	$(VALAC) --basedir $(top_srcdir) --vapidir $(top_srcdir)/gee --pkg gee-1.0 $^
+	$(VALAC) -C --basedir $(top_srcdir) --vapidir $(top_srcdir)/gee --pkg gee-1.0 $^
 	touch $@
 testarraylist_LDADD = $(progs_ldadd)
 EXTRA_DIST += $(testarraylist_VALASOURCES)
@@ -24,7 +24,7 @@ TEST_PROGS += testhashmap
 testhashmap_VALASOURCES = testhashmap.vala
 testhashmap_SOURCES = testhashmap.c testhashmap.h
 $(testhashmap_SOURCES): $(testhashmap_VALASOURCES)
-	$(VALAC) --basedir $(top_srcdir) --vapidir $(top_srcdir)/gee --pkg gee-1.0 $^
+	$(VALAC) -C --basedir $(top_srcdir) --vapidir $(top_srcdir)/gee --pkg gee-1.0 $^
 	touch $@
 testhashmap_LDADD = $(progs_ldadd)
 EXTRA_DIST += $(testhashmap_VALASOURCES)
@@ -33,7 +33,7 @@ TEST_PROGS += testhashset
 testhashset_VALASOURCES = testhashset.vala
 testhashset_SOURCES = testhashset.c testhashset.h
 $(testhashset_SOURCES): $(testhashset_VALASOURCES)
-	$(VALAC) --basedir $(top_srcdir) --vapidir $(top_srcdir)/gee --pkg gee-1.0 $^
+	$(VALAC) -C --basedir $(top_srcdir) --vapidir $(top_srcdir)/gee --pkg gee-1.0 $^
 	touch $@
 testhashset_LDADD = $(progs_ldadd)
 EXTRA_DIST += $(testhashset_VALASOURCES)
