@@ -1,3 +1,11 @@
+2008-05-07  Jürg Billeter  <j@bitron.ch>
+
+	* gee/Makefile.am:
+	* tests/Makefile.am:
+
+	Update build system to use valac -C,
+	patch by Jaap A. Haitsma, fixes bug 531224
+
 2008-05-01  Jürg Billeter  <j@bitron.ch>
 
 	* configure.ac: Post-release version bump
